src/test/deca/context/valid/123_classeCastAdvanced.deca
// Description:
//    Programme minimaliste: une classe et des Cast dans le Main.
//
// Résultats:
//
//
// Historique:
//    cree le 01/01/2022

class A { }
class B extends A { }
class C extends B { }
{
   A a;
   B b;
   a = new C();
   if (a instanceof B) {
        b = (B)(a);
        println("ok");
   }
}
