src/test/deca/context/invalid/37_IntInstanceOfA.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 14: ContextualError: Incorrect types
// 
// Historique:
//    cree le 01/01/2022

class A {
}
{
   // Doit etre refuse.
   boolean b = 1.0 instanceof A;
}
